# city_generator

./: .gitignore  Cargo.toml  LICENSE  TODO  export.html  export.txt  script.js  stories_export.txt  style.css
src/: city.rs  culture.rs  data_parser.rs  institutions.rs  language.rs  language2.rs  main.rs  mind.rs  names.rs  parser.rs  relations.rs  templater.rs  utils.rs
src/city/: building.rs  html_exporter.rs  institutions.rs  locations.rs  population.rs
src/city/institutions/: food_institutions.rs  visits.rs
src/language/: adjectives.rs  nouns.rs
src/language2/: names.rs  templater2.rs
src/mind/: relations.rs
static_data/: building_suffixes.csv  english_first_names.csv  english_last_names.csv  food_service_suffixes.csv  formatted-language_nouns.csv  institution_suffixes.csv  institutions_general_retail_suffixes.csv  institutions_specialist_retail_suffixes.csv  language_nouns.csv  location_descriptors.csv  location_major_features.csv  location_minor_features.csv  location_prefixes.csv
static_data/adjectives/: age.csv  colours.csv  physical_appearance.csv  position.csv  quality.csv  size.csv  taste.csv
static_data/nouns/: buildings.csv  creatures.csv  directions.csv  emotions.csv  english_first_names.csv  english_last_names.csv  fantasy_f_first_names.csv  fantasy_last_names.csv  fantasy_m_first_names.csv  food_dishes.csv  general_retailer_names.csv  geography.csv  institutation_entertainment_names.csv  institution_service_names.csv  materials.csv  modern_first_names.csv  modern_last_names.csv  plants.csv  specialist_retailer_names.csv  titles.csv
(+23 files in other folders)
